# red3

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  entrance-length.cpp
doc/: red3.tex
include/red3/: api.hpp  approxfrac.hpp  array.hpp  arrayops.hpp  defs.hpp  grid.hpp  staggeredgrid.hpp  utilities.hpp
laminar-channel/: CMakeLists.txt  entrance-length.cpp  geom.cpp
resources/: chan100.json
scripts/: codecheck.py
simple2d/: CMakeLists.txt  geom.cpp
src/: CMakeLists.txt  approxfrac.cpp  approxfrac.hpp  array.cpp  array.hpp  arrayops.hpp  block.hpp  def.hpp  dev.hpp  geom.hpp  grid.cpp  grid.hpp  main.cpp  operators.cpp  red3.h  red3.hpp  red3api.h  red3api.hpp  staggeredgrid.cpp  staggeredgrid.hpp  staggeredmodel.cpp  staggeredmodel.h  staggeredmodel.hpp  upwind.cpp  upwind.hpp  util.cpp  util.h  util.hpp  utilities.cpp  utilities.hpp
test/: CMakeLists.txt  approxfractests.cpp  arraytests.cpp  gridtests.cpp  main.cpp  staggeredgridtests.cpp  upwindtests.cpp  utilitiestests.cpp
visualizers/: flat_array.natvis  red3array.natvis
